[tool.poetry]
name = "zscaler-scripts"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
